--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@formatjs/intl-datetimeformat": "^4.3.0",
+    "@formatjs/intl-displaynames": "^5.3.0",
+    "@formatjs/intl-getcanonicallocales": "^1.8.0",
+    "@formatjs/intl-listformat": "^6.4.0",
+    "@formatjs/intl-locale": "^2.4.41",
+    "@formatjs/intl-numberformat": "^7.3.0",
+    "@formatjs/intl-pluralrules": "^4.2.0",
+    "@formatjs/intl-relativetimeformat": "^9.4.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.7.0",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "intl": "^1.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-localize": "^2.1.6",
     "react-native-maps": "0.28.1",
     "react-native-maps-directions": "^1.8.0",
     "react-native-safe-area-context": "3.3.2",
